# speckle_automate-basic_clash_demo

./: .dockerignore  .gitignore  Dockerfile  README.md  flatten.py  main.py  pyproject.toml  requirements.txt  speckle-automate-basic-clash-demo.code-workspace
.devcontainer/: devcontainer.json
.github/workflows/: main.yml
Geometry/: clash.py  element.py  helpers.py  mesh.py  mocks.py  p.py
Rules/: checks.py
Utilities/: flatten.py
tests/: conftest.py  test_main.py
