[tool.poetry]
name = "speckle-automate-basic-clash-demo"
version = "0.1.0"
description = "Example function for Speckle Automate using specklepy and PyMesh"
authors = ["Jonathon Broughton <jonathon@speckle.systems>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
specklepy = "2.17.11"
trimesh = "^4.0.4"
pymesh = {git = "https://github.com/PyMesh/PyMesh.git"}

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.3.0"
ruff = "^0.0.271"
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "UP",  # pyupgrade
  "D",   # pydocstyle
  "I",   # isort
]

[tool.ruff.pydocstyle]
convention = "google"
